--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-03-25  Jan Urbanski  <jurbanski@flumotion.com>
+
+	* flumotion/component/producers/fms/fms.py:
+	Log the exception message, not just the fact that an exception
+	occurred.
+
 2010-03-23  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
 	reviewed by: jribas
