--- a/README
+++ b/README
@@ -8,10 +8,12 @@ Testing
 
 Streaming from a file and save it to disk:
  - start server:
-FLU_DEBUG=4 flumotion-launch flash-media-server-producer ! disk-consumer directory=/tmp
+FLU_DEBUG=4 flumotion-launch flash-media-server-producer ! disk-consumer directory=/tmp filename=test
 
  - start client:
-  ffmpeg -debug -i holly.mp4 -re -acodec copy -vcodec copy -f flv rtmp://level.fluendo.fluendo.lan/live/stream.flv
+  bin/ffmpeg -i phoenix.mp4 -re -acodec copy -vcodec copy -f flv rtmp://localhost/live/stream.flv
+
+Verify whether the server correctly parses the framerate of the video file.
 
 Server should go from hungry to happy, and report first received buffers
 and timestamps for audio and video.
