--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-04-06  Theodoros Paschidis <tpaschidis@flumotion.com>
+
+	* flumotion/component/producers/fms/fms.py:
+	Nasty little space.
+
 2011-04-05  Theodoros Paschidis <tpaschidis@flumotion.com>
 
 	* flumotion/component/producers/fms/fms.py:
