Generate ChangeLog from git-log

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,313 +1,1 @@
-2011-09-14  Xavier Queralt  <xqueralt@flumotion.com>
-
-	* flumotion/component/producers/fms/admin_gtk.py:
-	* flumotion/component/producers/fms/fms.py:
-	Add information and warning messages to the component when something
-	happens:
-	  - new client connects, disconnects, publishes, unpublishes
-	  - the client isn't publishing video or audio
-	  - The client tried to publish using a wrong mount point
-	  - A client is trying to publish but we already have one
-
-2011-08-03  Xavier Queralt  <xqueralt@flumotion.com>
-
-	reviewed by: jribas
-
-	* flumotion/component/producers/fms/admin_gtk.py:
-	* flumotion/component/producers/fms/fms.glade:
-	* flumotion/component/producers/fms/fms.py:
-	Improvements on how we display the information in the admin.
-
-2011-06-29  Xavier Queralt  <xqueralt@gmail.com>
-
-	* flumotion/component/producers/fms/fms.py:
-	There is no need of sending flumotion-reset anymore!
-
-2011-04-06  Theodoros Paschidis <tpaschidis@flumotion.com>
-
-	* flumotion/component/producers/fms/fms.py:
-	Nasty little space.
-
-2011-04-05  Theodoros Paschidis <tpaschidis@flumotion.com>
-
-	* flumotion/component/producers/fms/fms.py:
-	Fixed the case where we get into an infinite loop in case we recieve
-	a start code of unknown nal_unit_type.
-
-2011-04-05  Xavier Queralt  <xqueralt@flumotion.com>
-
-	* flumotion/component/producers/fms/fms.py:
-	Lower log level of some messages
-
-2011-04-05  Xavier Queralt  <xqueralt@flumotion.com>
-
-	* README:
-	* flumotion/component/producers/fms/Makefile.am:
-	* flumotion/component/producers/fms/admin_gtk.py:
-	* flumotion/component/producers/fms/fms.glade:
-	* flumotion/component/producers/fms/fms.py:
-	* flumotion/component/producers/fms/fms.xml:
-	Added two tabs to better debug the input connections to fms producer.
-
-2011-03-24  Josep Joan Ribas  <jribas@flumotion.com>
-
-	reviewed by: Xavier Queralt
-
-	* flumotion/component/producers/fms/fms.py:
-	Discard requests to clear metadata.
-	We take care of clearing metadata when we receive changes in the
-	metadata. There is no need for us to it to clear it in the
-	@clearDataFrame handler.
-
-2011-03-24  Josep Joan Ribas  <jribas@flumotion.com>
-
-	reviewed by: Xavier Queralt
-
-	* flumotion/component/producers/fms/fms.py:
-	Allow receiving audio stream headers before metadata.
-	When the audio tag containing the sequence header comes before
-	the new metadata and the codec didn't change we have to keep the
-	header and send it later.
-
-2011-03-09  Xavier Queralt  <xqueralt@flumotion.com>
-
-	* flumotion/component/producers/fms/fms.py:
-	With the new GStreamer we don't need to set the caps of the appsrc.
-	Actually, if we do, the next component receives the streamheader twice
-	and can commit suicide if he doesn't like receiving two headers
-	(e.g. decoder). See #15261
-
-2011-03-09  Xavier Queralt  <xqueralt@flumotion.com>
-
-	* flumotion/component/producers/fms/fms.py:
-	Remove startcodes from the incoming H.264 packets.
-	When pushing from a Digital Rapids encoder we get:
-	  - access unit delimiter in each packet
-	  - SPS and PPS embeded each 2 seconds
-	This breaks the decoder so we don't want it!
-	See https://code.area51.fluendo.com/private/trac/ticket/14915#comment:7
-
-2010-12-02  Xavier Queralt  <xqueralt@flumotion.com>
-
-	reviewed by: jribas
-
-	* flumotion/component/producers/fms/fms.py:
-	Instead of monitorizing the buffers we receive via a callLater we
-	can use the pad monitors we already have in the components.
-
-2010-11-15  Xavier Queralt  <xqueralt@flumotion.com>
-
-	reviewed by: jribas
-
-	* flumotion/component/producers/fms/fms.py:
-	Implement publishStream method on our application. This way we can
-	check if a given stream has already been published and/or if the client
-	is still alive. If the encoder died or lost the connection without
-	unpublishing/disconnecting, here we can detect it and proceed with the
-	disconnect/unpublish before letting another encoder to publish.
-
-2010-11-15  Xavier Queralt  <xqueralt@flumotion.com>
-
-	reviewed by: jribas
-
-	* flumotion/component/producers/fms/fms.py:
-	Do not remove subscribers. It is done already in a deeper layer.
-
-2010-11-15  Xavier Queralt  <xqueralt@flumotion.com>
-
-	reviewed by: jribas
-
-	* flumotion/component/producers/fms/fms.py:
-	Modifications to be compatible with new rtmpy
-
-2010-11-15  Xavier Queralt  <xqueralt@flumotion.com>
-
-	reviewed by: jribas
-
-	* flumotion/component/producers/fms/live.py:
-	Modifications to be compatible with new rtmpy
-
-2010-09-30  Andoni Morales Alastruey  <amorales@flumotion.com>
-
-	reviewed by: Sebastien Merle
-	* flumotion/component/producers/fms/fms.py:
-	Fix re-timestamping and synchronisation.
-
-	A trailing video buffer is sent after the reconnection with a weird
-	timestamp (non-contiguous).It was causing gaps in the re-timestamping
-	and introducing desyncs. This was fixed dropping buffers until we get
-	a continous keyframe.
-
-	Now that we know that this buffer is an H264 END_OF_SEQUENCE packet,
-	we can set its timeamp to the last one received and start
-	re-timestamping the next buffers from this resync point.
-	The re-timestamping logic is more simple and robust:
-	fixedTS = syncTS - syncOffset + timestamp
-
-	Example:
-	We received the last buffer with ts=10000. After the reconnection
-	buffer1 has ts=100 and buffer2 has ts=140. We set syncTS=10000+x (where x
-	is set to 40ms because a gap is needed from the last timestamp) and
-	syncOffset=100
-	We get after fixing the timestamps:
-	buffer1 -> ts=10040
-	buffer2 -> ts=10080
-
-
-2010-09-29  Thomas Vander Stichele  <thomas at apestaart dot org>
-
-	* flumotion/component/producers/fms/fms.py:
-	  Add more debugging, so we clearly see when we receive the first
-	  buffer for audio and video, and when we send them.
-	  Don't trust bogus announcements of 1000 fps as framerate;
-	  put in a hack to force it to 25 fps in that case.
-
-2010-09-29  Thomas Vander Stichele  <thomas at apestaart dot org>
-
-	* flumotion/component/producers/fms/fms.py:
-	  Add comments, including FIXME for missing comments.
-	  Log at INFO level when a client connects and disconnects.
-	  Fix some typos and log messages.
-
-2010-08-30  Xavier Queralt  <xqueralt@flumotion.com>
-
-	* flumotion-flashmedia.spec.in:
-	Fix the spec to also include the translations
-
-2010-08-30  Xavier Queralt  <xqueralt@flumotion.com>
-
-	reviewed by: Josep Joan Ribas <jribas@flumotion.com>
-
-	* flumotion/component/producers/fms/fms.py:
-	If there is no framerate, no way we're going to expect audio. Set the
-	stream as synced and start processing the audio buffers.
-
-2010-08-27  Xavier Queralt  <xqueralt@flumotion.com>
-
-	* flumotion/component/producers/fms/fms.py:
-	Set the caps to the output pad just when we have the real caps (with
-	the streamheader). Otherwise the negotiation is done without the
-	streamheader and the stream cannot be parsed properly on the other
-	side.
-
-2010-08-10  Xavier Queralt  <xqueralt@flumotion.com>
-
-	* configure.ac:
-	Require a lower gettext version
-
-2010-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>
-
-	* Makefile.am:
-	* autogen.sh:
-	* configure.ac:
-	* m4 (added):
-	* po (added):
-	* po/LINGUAS (added):
-	* po/nl.po (added):
-	* po/Makevars (added):
-	* po/POTFILES.in (added):
-	  Make module translatable.
-
-2010-07-21  Xavier Queralt  <xqueralt@flumotion.com>
-
-	* flumotion/component/producers/fms/fms.xml:
-	Change deprecated attribute 'description' by '_description' and add
-	some missing descriptions too
-
-2010-06-09  Xavier Queralt Mateu  <xqueralt@flumotion.com>
-
-	reviewed by: jribas
-
-	* flumotion/component/producers/fms/fms.py:
-	Send reset always before starting streaming
-
-2010-05-19  Josep Joan Ribas  <jribas@flumotion.com>
-
-	reviewed by: xqueralt
-
-	* flumotion/component/producers/fms/fms.py:
-	Prevent FMLE from sending too many audio packets downstream
-	to prevent synchronization issues.
-
-2010-03-26  Xavier Queralt Mateu  <xqueralt@flumotion.com>
-
-	reviewed by: Julien LeGoff
-
-	* flumotion/component/producers/fms/fms.py:
-	When setting the new stream header from the backup we shouldn't try to
-	start streaming before sending the present buffer normaly.
-	Add comments about the new behaviour.
-
-2010-03-25  Jan Urbanski  <jurbanski@flumotion.com>
-
-	* flumotion/component/producers/fms/fms.py:
-	Log the exception message, not just the fact that an exception
-	occurred.
-
-2010-03-23  Xavier Queralt Mateu  <xqueralt@flumotion.com>
-
-	reviewed by: jribas
-
-	* flumotion/component/producers/fms/fms.py:
-	Fix a bug when the video tag containing the sequence header comes before
-	the new metadata and the codec didn't change. The change was not
-	detected till the metadata came and the sequece header was dropped.
-	Consequently, all the following tags were dropped because there were no
-	sequence header.
-	Fixes #8604
-
-2010-02-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>
-
-	reviewed by: jribas
-
-	* flumotion/component/producers/fms/fms.py:
-	Handle better when two or more clients try to publish at the same time.
-
-2010-02-18  Xavier Queralt Mateu  <xqueralt@flumotion.com>
-
-	reviewed by: Sebastien Merle
-
-	* flumotion/component/producers/fms/fms.py:
-	Enable the component to accept reconnections from the encoder:
-	  - When there are network problems
-	  - When the encoder is stopped/restarted
-	  - When the user changes the configuration of the encoded stream
-
-2010-02-15  Xavier Queralt Mateu  <xqueralt@flumotion.com>
-
-	* env.in:
-	Add flumotion scripts to the path in env
-
-2010-01-28  Xavier Queralt Mateu  <xqueralt@flumotion.com>
-
-	* Makefile.am:
-	Add rpm creation rules to the makefile
-	* configure.ac:
-	* flumotion-flashmedia.spec.in:
-	Sync with changes in flumotion at r8195
-
-2009-06-16  Sebastien Merle  <sebastien@fluendo.com>
-
-	* flumotion/component/producers/fms/fms.py:
-	The bug the last commit worked around is now fixed.
-
-2009-06-04  Sebastien Merle  <sebastien@fluendo.com>
-
-	* flumotion/component/producers/fms/fms.py:
-	RTMPy seems to not report refused publish error to FME,
-	so the encoder don't gives feedback and seems to stream
-	normally even if the data is discarded by RTMPy.
-	Force disconnection when refusing to publish a stream.
-
-2009-06-04  Sebastien Merle  <sebastien@fluendo.com>
-
-	* flumotion/component/producers/fms/fms.py:
-	Now properly set gstreamer DELTA_UNIT flag for audio buffer.
-	This was preventing burst-to-keyframe to work properly.
-
-2009-06-04  Sebastien Merle  <sebastien@fluendo.com>
-
-	* flumotion/component/producers/fms/fms.py:
-	Fixed to match the API modifications after commiting changes to flvlib.
-	Need flvlib 0.1.5.
-
+# Generated by Makefile. Do not edit.
